--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vue-tradingview-widgets",
-    "version": "0.0.0-development",
+    "version": "1.2.5",
     "private": false,
     "description": "tradingview widgets for Vue3 and Nuxt3",
     "author": "Ehsan Shahvirdi",
